# IftProject

./: CMakeLists.txt
lib/: CMakeLists.txt  IftLibrary.cpp  IftLibrary.h
programm_1/: CMakeLists.txt  Program_1.cpp  Program_1.h
programm_2/: CMakeLists.txt  Program_2.cpp  Program_2.h
